LPS-206101 - Refactor. Revert z-index change to prevent displaying close icon twice

--- a/modules/apps/frontend-data-set/frontend-data-set-web/src/main/resources/META-INF/resources/styles/_side_panel.scss
+++ b/modules/apps/frontend-data-set/frontend-data-set-web/src/main/resources/META-INF/resources/styles/_side_panel.scss
@@ -101,7 +101,7 @@
 		top: 0;
 		transition: top ease-in-out 0.1s, right ease-in-out 0.1s,
 			opacity ease-in 0.2s;
-		z-index: 10;
+		z-index: 1;
 
 		&.fds-side-panel-close-menu {
 			opacity: 1;
